--- a/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
+++ b/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
@@ -13,13 +13,13 @@
         <viewModels:MainWindowViewModel />
     </Design.DataContext>
     <DockPanel HorizontalAlignment="Stretch">
-        <Border Name="RyuLogo" Padding="7, 0, 0, 0" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Image 
-                ToolTip.Tip="{Binding Title}" 
-                Height="25" 
-                Width="25"
-                Source="resm:Ryujinx.UI.Common.Resources.Logo_Ryujinx.png?assembly=Ryujinx.UI.Common" />
-        </Border>
+        <Image
+            Name="RyuLogo"
+            Margin="7, 0"
+            Height="25"
+            Width="25"
+            ToolTip.Tip="{Binding Title}"
+            Source="resm:Ryujinx.UI.Common.Resources.Logo_Ryujinx.png?assembly=Ryujinx.UI.Common" />
         <Menu
             Name="Menu"
             Height="35"
@@ -56,7 +56,8 @@
                     Icon="{icon:Icon fa-solid fa-code-compare}"
                     IsEnabled="{Binding EnableNonGameRunningControls}"
                     ToolTip.Tip="{locale:Locale LoadTitleUpdatesFromFolderTooltip}" />
-                <MenuItem Header="{locale:Locale MenuBarFileOpenApplet}" IsEnabled="{Binding IsAppletMenuActive}" Icon="{icon:Icon mdi-launch}">
+                <MenuItem Header="{locale:Locale MenuBarFileOpenApplet}"
+                    IsEnabled="{Binding IsAppletMenuActive}" Icon="{icon:Icon mdi-launch}">
                     <MenuItem
                         Click="OpenMiiApplet"
                         Header="Mii Edit Applet"
@@ -145,9 +146,9 @@
                         </Style>
                     </MenuItem.Styles>
                 </MenuItem>
-                <Separator/>
+                <Separator />
                 <MenuItem
-                    Name="ChangeLanguageMenuItem" 
+                    Name="ChangeLanguageMenuItem"
                     Padding="0"
                     Header="{locale:Locale MenuBarOptionsChangeLanguage}"
                     Icon="{icon:Icon fa-solid fa-language}">
@@ -163,8 +164,8 @@
                         </Style>
                     </MenuItem.Styles>
                 </MenuItem>
-                <MenuItem 
-                    Name="ToggleFileTypesMenuItem" 
+                <MenuItem
+                    Name="ToggleFileTypesMenuItem"
                     Padding="-10,0,0,0"
                     Header="{locale:Locale MenuBarShowFileTypes}" />
                 <Separator />
@@ -232,7 +233,8 @@
                     InputGesture="Escape"
                     IsEnabled="{Binding IsGameRunning}"
                     ToolTip.Tip="{locale:Locale StopEmulationTooltip}" />
-                <MenuItem Command="{Binding SimulateWakeUpMessage}" Header="{locale:Locale MenuBarOptionsSimulateWakeUpMessage}" />
+                <MenuItem Command="{Binding SimulateWakeUpMessage}"
+                    Header="{locale:Locale MenuBarOptionsSimulateWakeUpMessage}" />
                 <Separator />
                 <MenuItem
                     Name="ScanAmiiboMenuItem"
@@ -261,19 +263,30 @@
                     IsEnabled="{Binding IsGameRunning}" />
             </MenuItem>
             <MenuItem VerticalAlignment="Center" Header="{locale:Locale MenuBarTools}">
-                <MenuItem Header="{locale:Locale MenuBarToolsInstallFirmware}" Icon="{icon:Icon fa-solid fa-download}" IsEnabled="{Binding EnableNonGameRunningControls}">
-                    <MenuItem Command="{Binding InstallFirmwareFromFile}" Header="{locale:Locale MenuBarFileToolsInstallFirmwareFromFile}" Icon="{icon:Icon mdi-file-cog}" />
-                    <MenuItem Command="{Binding InstallFirmwareFromFolder}" Header="{locale:Locale MenuBarFileToolsInstallFirmwareFromDirectory}" Icon="{icon:Icon mdi-folder-cog}" />
+                <MenuItem Header="{locale:Locale MenuBarToolsInstallFirmware}"
+                    Icon="{icon:Icon fa-solid fa-download}"
+                    IsEnabled="{Binding EnableNonGameRunningControls}">
+                    <MenuItem Command="{Binding InstallFirmwareFromFile}"
+                        Header="{locale:Locale MenuBarFileToolsInstallFirmwareFromFile}"
+                        Icon="{icon:Icon mdi-file-cog}" />
+                    <MenuItem Command="{Binding InstallFirmwareFromFolder}"
+                        Header="{locale:Locale MenuBarFileToolsInstallFirmwareFromDirectory}"
+                        Icon="{icon:Icon mdi-folder-cog}" />
                 </MenuItem>
-                <MenuItem Header="{locale:Locale MenuBarToolsManageFileTypes}" IsVisible="{Binding ManageFileTypesVisible}">
-                    <MenuItem Header="{locale:Locale MenuBarToolsInstallFileTypes}" Click="InstallFileTypes_Click"/>
-                    <MenuItem Header="{locale:Locale MenuBarToolsUninstallFileTypes}" Click="UninstallFileTypes_Click"/>
+                <MenuItem Header="{locale:Locale MenuBarToolsManageFileTypes}"
+                    IsVisible="{Binding ManageFileTypesVisible}">
+                    <MenuItem Header="{locale:Locale MenuBarToolsInstallFileTypes}"
+                        Click="InstallFileTypes_Click" />
+                    <MenuItem Header="{locale:Locale MenuBarToolsUninstallFileTypes}"
+                        Click="UninstallFileTypes_Click" />
                 </MenuItem>
             </MenuItem>
             <MenuItem VerticalAlignment="Center" Header="{locale:Locale MenuBarView}">
                 <MenuItem VerticalAlignment="Center" Header="{locale:Locale MenuBarViewWindow}">
-                    <MenuItem Header="{locale:Locale MenuBarViewWindow720}" Tag="720 1280" Click="ChangeWindowSize_Click" />
-                    <MenuItem Header="{locale:Locale MenuBarViewWindow1080}" Tag="1080 1920" Click="ChangeWindowSize_Click" />
+                    <MenuItem Header="{locale:Locale MenuBarViewWindow720}" Tag="720 1280"
+                        Click="ChangeWindowSize_Click" />
+                    <MenuItem Header="{locale:Locale MenuBarViewWindow1080}" Tag="1080 1920"
+                        Click="ChangeWindowSize_Click" />
                 </MenuItem>
             </MenuItem>
             <MenuItem VerticalAlignment="Center" Header="{locale:Locale MenuBarHelp}">
