--- a/src/Ryujinx/UI/Views/Main/MainStatusBarView.axaml
+++ b/src/Ryujinx/UI/Views/Main/MainStatusBarView.axaml
@@ -29,7 +29,7 @@
             Margin="5"
             VerticalAlignment="Center"
             IsVisible="{Binding EnableNonGameRunningControls}">
-            <Grid Margin="0" ColumnDefinitions="Auto,Auto,*">
+            <Grid Margin="0" ColumnDefinitions="Auto,Auto,Auto,*">
                 <Button
                     Width="25"
                     Height="25"
@@ -50,9 +50,18 @@
                     VerticalAlignment="Center"
                     IsVisible="{Binding EnableNonGameRunningControls}"
                     Text="{locale:Locale StatusBarGamesLoaded}" />
+                <TextBlock
+                    Name="StatusBarProgressStatus"
+                    Grid.Column="2"
+                    MinWidth="200"
+                    Margin="10,0,5,0"
+                    VerticalAlignment="Center"
+                    IsVisible="{Binding StatusBarProgressStatusVisible}"
+                    Text="{Binding StatusBarProgressStatusText}" />
                 <ProgressBar
                     Name="LoadProgressBar"
-                    Grid.Column="2"
+                    Grid.Column="3"
+                    MinWidth="200"
                     Height="6"
                     VerticalAlignment="Center"
                     Foreground="{DynamicResource SystemAccentColorLight2}"
@@ -126,27 +135,27 @@
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatio4x3}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed4x3}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed4x3}" />
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatio16x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed16x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed16x9}" />
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatio16x10}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed16x10}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed16x10}" />
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatio21x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed21x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed21x9}" />
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatio32x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed32x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed32x9}" />
                         <MenuItem
                             Header="{locale:Locale SettingsTabGraphicsAspectRatioStretch}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Stretched}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Stretched}" />
                     </MenuFlyout>
                 </SplitButton.Flyout>
             </SplitButton>
@@ -174,7 +183,8 @@
                 <ToggleSplitButton.Styles>
                     <Style Selector=":checked">
                         <Style Selector="^:checked ContentPresenter">
-                            <Setter Property="Foreground" Value="{DynamicResource ThemeForegroundColor}" />
+                            <Setter Property="Foreground"
+                                Value="{DynamicResource ThemeForegroundColor}" />
                         </Style>
                     </Style>
                     <Style Selector="Border#SeparatorBorder">
