--- a/src/Ryujinx/UI/Views/Input/InputView.axaml
+++ b/src/Ryujinx/UI/Views/Input/InputView.axaml
@@ -108,7 +108,7 @@
                         ToolTip.Tip="{ext:Locale ControllerSettingsLoadProfileToolTip}"
                         Command="{Binding LoadProfile}">
                         <ui:SymbolIcon
-                            Symbol="View"
+                            Symbol="Upload"
                             FontSize="15"
                             Height="20" />
                     </Button>
