--- a/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
+++ b/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
@@ -277,7 +277,8 @@
                     <MenuItem Header="{ext:Locale MenuBarToolsUninstallFileTypes}" Click="UninstallFileTypes_Click" />
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="{ext:Locale MenuBarToolsXCITrimmer}" Click="OpenXCITrimmerWindow"
+                <MenuItem Header="{ext:Locale MenuBarToolsXCITrimmer}"
+                          IsEnabled="{Binding EnableNonGameRunningControls}" Click="OpenXCITrimmerWindow"
                           Icon="{ext:Icon fa-solid fa-scissors}" />
             </MenuItem>
             <MenuItem VerticalAlignment="Center" Header="{ext:Locale MenuBarView}">
