--- a/src/Ryujinx/UI/Windows/XCITrimmerWindow.axaml
+++ b/src/Ryujinx/UI/Windows/XCITrimmerWindow.axaml
@@ -297,7 +297,7 @@
                         Margin="5"
                         Click="Trim"
                         IsEnabled="{Binding CanTrim}">
-                        <TextBlock Text="Trim" />
+                        <TextBlock Text="{ext:Locale XCITrimmerTrim}" />
                     </Button>
                     <Button
                         Name="UntrimButton"
@@ -305,7 +305,7 @@
                         Margin="5"
                         Click="Untrim"
                         IsEnabled="{Binding CanUntrim}">
-                        <TextBlock Text="Untrim" />
+                        <TextBlock Text="{ext:Locale XCITrimmerUntrim}" />
                     </Button>
                 </StackPanel>
                 <StackPanel
