--- a/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
+++ b/src/Ryujinx/UI/Views/Main/MainMenuBarView.axaml
@@ -271,6 +271,14 @@
                               Header="{ext:Locale MenuBarFileToolsInstallFirmwareFromDirectory}"
                               Icon="{ext:Icon mdi-folder-cog}" />
                 </MenuItem>
+                <MenuItem Header="{ext:Locale MenuBarToolsInstallKeys}" Icon="{ext:Icon fa-solid fa-key}"
+                          IsEnabled="{Binding EnableNonGameRunningControls}">
+                    <MenuItem Command="{Binding InstallKeysFromFile}"
+                              Header="{ext:Locale MenuBarFileToolsInstallKeysFromFile}" Icon="{ext:Icon mdi-file-cog}" />
+                    <MenuItem Command="{Binding InstallKeysFromFolder}"
+                              Header="{ext:Locale MenuBarFileToolsInstallKeysFromFolder}"
+                              Icon="{ext:Icon mdi-folder-cog}" />
+                </MenuItem>
                 <MenuItem Header="{ext:Locale MenuBarToolsManageFileTypes}"
                           IsVisible="{Binding ManageFileTypesVisible}">
                     <MenuItem Header="{ext:Locale MenuBarToolsInstallFileTypes}" Click="InstallFileTypes_Click"
