--- a/src/Ryujinx/UI/Views/Main/MainStatusBarView.axaml
+++ b/src/Ryujinx/UI/Views/Main/MainStatusBarView.axaml
@@ -79,15 +79,59 @@
             MaxHeight="18"
             Orientation="Horizontal">
             <TextBlock
-                Name="VsyncStatus"
+                Name="VSyncMode"
                 Margin="5,0,5,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                Foreground="{Binding VsyncColor}"
+                Foreground="{Binding VSyncModeColor}"
                 IsVisible="{Binding !ShowLoadProgress}"
-                PointerReleased="VsyncStatus_PointerReleased"
-                Text="VSync"
+                PointerReleased="VSyncMode_PointerReleased"
+                Text="{Binding VSyncModeText}"
                 TextAlignment="Start" />
+            <Button MinWidth="0"
+                    Width="20"
+                    IsVisible="{Binding ShowCustomVSyncIntervalPicker}"
+                    Margin="-5,0,5,0"
+                    Background="Transparent"
+                    BorderThickness="0">
+                <ui:SymbolIcon Symbol="Settings"
+                               HorizontalAlignment="Stretch"
+                               VerticalAlignment="Center"
+                               Width="14"
+                               Height="14" />
+                <Button.Styles>
+                    <Style Selector=":checked">
+                        <Style Selector="^:checked ContentPresenter">
+                            <Setter Property="Foreground" Value="{DynamicResource ThemeForegroundColor}" />
+                        </Style>
+                    </Style>
+                    <Style Selector="Border#SeparatorBorder">
+                        <Setter Property="Opacity" Value="0" />
+                    </Style>
+                </Button.Styles>
+                <Button.Flyout>
+                    <Flyout Placement="Top" ShowMode="TransientWithDismissOnPointerMoveAway">
+                        <StackPanel Margin="0,0,0,0"
+                                    Orientation="Horizontal">
+                            <Slider Value="{Binding CustomVSyncIntervalPercentageProxy}"
+                                    MinWidth="175"
+                                    Margin="0,-3,0,0"
+                                    Height="32"
+                                    Padding="0,-5"
+                                    TickFrequency="1"
+                                    IsSnapToTickEnabled="True"
+                                    LargeChange="10"
+                                    SmallChange="1"
+                                    VerticalAlignment="Center"
+                                    Minimum="10"
+                                    Maximum="400" />
+                            <TextBlock Margin="5,0"
+                                       Width="40"
+                                       Text="{Binding CustomVSyncIntervalPercentageText}" />
+                        </StackPanel>
+                    </Flyout>
+                </Button.Flyout>
+            </Button>
             <Border
                 Width="2"
                 Height="12"
@@ -135,27 +179,27 @@
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatio4x3}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed4x3}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed4x3}" />
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatio16x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed16x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed16x9}" />
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatio16x10}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed16x10}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed16x10}" />
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatio21x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed21x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed21x9}" />
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatio32x9}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Fixed32x9}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Fixed32x9}" />
                         <MenuItem
                             Header="{ext:Locale SettingsTabGraphicsAspectRatioStretch}"
                             Command="{Binding SetAspectRatio}"
-                            CommandParameter="{x:Static config:AspectRatio.Stretched}"/>
+                            CommandParameter="{x:Static config:AspectRatio.Stretched}" />
                     </MenuFlyout>
                 </SplitButton.Flyout>
             </SplitButton>
